--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
         <li><a href="Falcon9.html">Falcon9</a></li>
         <li><a href="FalconHeavy.html ">Falcon Heavy</a></li>
         <li><a href="Dragon.html">Dragon</a></li>
-        <li><a href=" ">Starship</a></li>
-        <li><a href=" ">Human spaceflight</a></li>
-        <li><a href=" ">Ride share</a></li>
-        <li><a href=" ">Starlink</a></li>
+        <li><a href="#">Starship</a></li>
+        <li><a href="#">Human spaceflight</a></li>
+        <li><a href="#">Ride share</a></li>
+        <li><a href="#">Starlink</a></li>
     </ul>
 </nav>
     </header>
