--- a/Dragon.html
+++ b/Dragon.html
@@ -40,13 +40,13 @@
 </div>
 <nav class="desktop-menu">
     <ul>
-        <li><a href="Falcon9.html">Falcon9</a></li>
-        <li><a href=" ">Falcon Heavy</a></li>
-        <li><a href="Dragon.html">Dragon</a></li>
-        <li><a href=" ">Starship</a></li>
-        <li><a href=" ">Human spaceflight</a></li>
-        <li><a href=" ">Ride share</a></li>
-        <li><a href=" ">Starlink</a></li>
+        <li><a href="/SpacePro/Falcon9.html">Falcon9</a></li>
+        <li><a href="/SpacePro/FalconHeavy.html">Falcon Heavy</a></li>
+        <li><a href="/SpacePro/Dragon.html">Dragon</a></li>
+        <li><a href="#">Starship</a></li>
+        <li><a href="#">Human spaceflight</a></li>
+        <li><a href="#">Ride share</a></li>
+        <li><a href="#">Starlink</a></li>
     </ul>
 </nav>
     </header>
