--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
   
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="/SpacePro/css/style.css">
    
 
     <title>SpaceX project</title>
