--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
             <li><a href="#">    Careers</a></li>
             <li><a href="#">Updates</a></li>
             <li><a href="#">Shop</a></li>
-            <li class="mobile-only"><a href=" ">Falcon 9</a></li>
-            <li class="mobile-only"><a href=" ">Falcon Heavy</a></li>
+            <li class="mobile-only"><a href="#">Falcon 9</a></li>
+            <li class="mobile-only"><a href="#">Falcon Heavy</a></li>
             <li class="mobile-only"><a href="Dragon.html"></a></li>
-            <li class="mobile-only"><a href=" ">Starship</a></li>
-            <li class="mobile-only"><a href=" ">Human Spaceflight</a></li>
-            <li class="mobile-only"><a href=" ">Ride share</a></li>
-            <li class="mobile-only"><a href=" ">Starlink</a></li>
+            <li class="mobile-only"><a href="#">Starship</a></li>
+            <li class="mobile-only"><a href="#">Human Spaceflight</a></li>
+            <li class="mobile-only"><a href=" #">Ride share</a></li>
+            <li class="mobile-only"><a href="#">Starlink</a></li>
         </ul>
 
     </div>
